Fixed layout on smaller screen

--- a/assets/css/DrMario.css
+++ b/assets/css/DrMario.css
@@ -8,3 +8,4 @@
 /*.dr-mario .pill-bottle-root canvas.pill-bottle-canvas { border: 1px solid gainsboro; display: inline-block; }*/
 
 .game-status { position: fixed; top:0; background-color: black; color: yellowgreen; padding:15px; }
+.main-pill-bottle { position: fixed; top:15px; left: 15px; }
