--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,10 @@
-body { background: black; color: white; width: 480px; margin:auto;}
+body { background: black; color: white; max-width: 480px; margin:auto;}
 
 #opponents { position: fixed; right: 5px; top: 5px; }
+
+@media only screen and (max-width: 512px) {
+    #opponents { width: 116px; }
+}
 
 #my-settings { display: inline-block; margin:5px; width:calc(50% - 12px); }
 #multiplayer { display: inline-block; margin:5px; width:calc(50% - 12px); }
